syntax = "proto3";

option go_package = "github.com/skaex/grpc-primer-go-server/messages";

message HelloRequest {
  string Name = 1;
}

message HelloResponse {
  string Message = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}
